# ESP32C3_IDF_Project

WS2812B_driver_2/main/: CMakeLists.txt  main.c  ws2812B_driver.c  ws2812B_driver.h
esp32C3_AWS_HTTPS/: CMakeLists.txt  README.md
esp32C3_AWS_HTTPS/main/: CMakeLists.txt  component.mk  http_transmit.c  http_transmit.h  main.c
esp32C3_BLE/: CMakeLists.txt  Makefile
esp32C3_BLE/main/: CMakeLists.txt  main.c  wifi_connect.h
esp32C3_BLE_AWS/: CMakeLists.txt  Makefile
esp32C3_BLE_AWS/main/: CMakeLists.txt  ble_connect.c  ble_connect.h  main.c  (+3 more)
esp32C3_BLUFI/: CMakeLists.txt
esp32C3_EVT/: CMakeLists.txt  Makefile
esp32C3_EVT/main/: CMakeLists.txt  SPI_ws2812b.c  SPI_ws2812b.h  ble_connect.c  ble_connect.h  main.c  mqtt_transmit.c  mqtt_transmit.h  wifi_connect.c  wifi_connect.h
esp32C3_LEDC/: CMakeLists.txt
esp32C3_LOCAL_SERVER_OTA_HTTPS/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
esp32C3_WS2812B_RMT/: CMakeLists.txt  Makefile
esp32C3_WS2812B_SPI/: CMakeLists.txt  sdkconfig
esp32C3_firebase/: CMakeLists.txt
esp32C3_readLTR303/: CMakeLists.txt  sdkconfig.old
esp32C3_readMultiSensor_I2C/: CMakeLists.txt
esp32C3_readSCD4x/: CMakeLists.txt  sdkconfig
esp32C3_readSHT4x/: CMakeLists.txt  sdkconfig
esp32C3_timer/: CMakeLists.txt
esp32C3_wifi_connect/: CMakeLists.txt  sdkconfig
esp32_AWS_MQTT/: CMakeLists.txt  Makefile
esp32_AWS_MQTT_multiSensor/: CMakeLists.txt
esp32_AWS_MQTT_multiSensor/main/: CMakeLists.txt  component.mk  main.c  mqtt_transmit.c  mqtt_transmit.h  wifi_connect.h
esp32_FreeRTOS_ADC/: CMakeLists.txt
(+34 files in other folders)
